Extends AdditionalState to Object instead of double[] (issue-1645)